@@ -2,4 +2,8 @@
 from pyasn1.type import univ
 from pyasn1.codec.cer import decoder
 
-decode = decoder.Decoder(decoder.tagMap, decoder.typeMap)
+tagMap = decoder.tagMap
+typeMap = decoder.typeMap
+Decoder = decoder.Decoder
+
+decode = Decoder(tagMap, typeMap)
